report start + end done

--- a/report/additional.tex
+++ b/report/additional.tex
@@ -1,4 +1,6 @@
-\section{Защита окружающей среды}
+% !TeX spellcheck = russian-aot
+
+\section{Охрана окружающей среды}
 
 \tab
 Защита биоразнообразия окружающей среды является одной из приоритетных проблем, стоящих перед международным сообществом.
