--- a/report/contents.tex
+++ b/report/contents.tex
@@ -1,3 +1,5 @@
+% !TeX spellcheck = en_US
+
 \setlength{\cftbeforetoctitleskip}{-\baselineskip}
 \setlength{\cftaftertoctitleskip}{0pt}
 
@@ -7,5 +9,4 @@
 
 \tableofcontents
 
-\thispagestyle{empty}
 \clearpage
