--- a/report/definitions.tex
+++ b/report/definitions.tex
@@ -1,4 +1,6 @@
-\newcontsect{Определения}
+% !TeX spellcheck = russian-aot
+
+\newcont{Определения}
 
 \begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
 	\item \defineterm{report}{Отчёт} -- вся необходимая информация, касающаяся наблюдения волонтёром очага распространения потенциально опасного для человека растения.
