--- a/report/document.tex
+++ b/report/document.tex
@@ -1,14 +1,15 @@
-\begin{spacing}{1.5}
-	\input{contents.tex}
-	\input{definitions.tex}
-	
-	\input{introduction.tex}
-	\input{overview.tex}
-	\input{requirements.tex}
-	\input{additional.tex}
-	\input{conclusion.tex}
-	
-	\input{bibliography.tex}
-\end{spacing}
+% !TeX spellcheck = en_US
 
-% Распознование борщевика https://pandia.ru/text/80/694/94898.php
+\begin{spacing}{\trueonehalfspace}
+	\include{contents}
+	\include{definitions}
+	
+	\include{introduction}
+	\include{overview}
+	\include{requirements}
+	\include{description}
+	\include{additional}
+	\include{conclusion}
+	
+	\include{bibliography}
+\end{spacing}
