--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,4 +1,6 @@
-\newcontsect{Введение}
+% !TeX spellcheck = russian-aot
+
+\newcont{Введение}
 
 \tab
 В настоящий момент становится особенно актуальной проблема распространения потенциально опасных для человека видов растений.
@@ -6,7 +8,7 @@
 Отчасти актуальность этой проблемы объясняется расширением пригодных для произрастания таких растений территорий\cite{invasive-plants}.
 
 \nwln
-В европейской части России одним из самых опасных растений является борщевик Сосновского\cite{heracleum}, поэтому в данной работе контроль над распространением потенциально опасных растений рассматривается на его примере.
+В европейской части России одним из самых опасных растений является борщевик Сосновского\cite{heracleum}, поэтому в данной работе наблюдение за распространением потенциально опасных растений рассматривается на его примере.
 Согласно данным из открытой базы данных РИВР\cite{rivr} на территории Санкт-Петербурга и Ленинградской области насчитывается более 350 очагов распространения Heracleum sosnowskyi.
 По данным, опубликованным в журнале Esquire\cite{esquire} борщевик занимает до 15\% природных ландшафтов европейской части России.
 
