--- a/report/overview.tex
+++ b/report/overview.tex
@@ -1,51 +1,22 @@
+% !TeX spellcheck = russian-aot
+
 \section{Обзор предметной области}
 
-\subsection{Понятие контроля}
+\subsection{Понятие наблюдения}
 
 \tab
-В словаре\cite{control} указано, что слово \textquote{контроль} означает проверку и наблюдение с целью проверки.
-В рамках данной работы под контролем над распространением потенциально опасных для человека видов растений предлагается понимать также возможность принятия необходимых мер для устранения негативных последствий распространения этих растений.
-Предполагается, что контроль над такими растениями будет поручен группе учёных-экологов, в обязанности которых будет входить работа с системой.
+В рамках данной работы под наблюдением за распространением потенциально опасных для человека видов растений предлагается понимать сбор, каталогизацию и хранение данных о них.
+Предполагается, что наблюдение за такими растениями будет поручено группе учёных-экологов, в обязанности которых будет входить работа с системой.
 
 \nwln
-Для осуществления контроля (по данному выше определению) необходимо хранение информации об очагах распространения опасных растений, которая включает в себя фотографии растения, его географические координаты и краткое описание, данное обнаружившим его человеком, самого растения, а также места его произрастания.
+Необходимая для осуществления наблюдения информации об очагах распространения опасных растений включает в себя фотографии растения, его географические координаты и краткое описание, данное обнаружившим его человеком, самого растения, а также места его произрастания.
 Такой набор данных в данной работе будет называться \linkterm{report}{отчёт}.
+Функция сортировки и поиска конкретного отчёта по нескольким признакам в данной работе будет называться \linkterm{processing}{работа с данными}.
+
+\nwln
 В случае наблюдения за несколькими видами потенциально опасных растений каждый отчёт также должен содержать информацию о видовой принадлежности обнаруженного растения.
 В следствии того, что эти сведения со временем могут терять актуальность или же требовать модерации, в отчёте необходимо также хранить информацию о статусе данных и дате совершения наблюдения.
-Предлагается использование трёх статусов: \textquote{необработано}, \textquote{актуально}, \textquote{неактуально}; в зависимости от необходимых мер контроля можно добавить и другие.
-
-\nwln
-Для осуществления поиска и анализа данных необходима функция сортировки и поиска конкретного наблюдения по нескольким признакам. Такая функция в данной работе будет называться \linkterm{processing}{обработка данных}. \\
-
-\subsection{Источник информации}
-
-\tab
-В качестве источника информации и средства наблюдения предлагается использовать неограниченное количество волонтёров, заинтересованных в решении экологических проблем.
-Эти люди в данной работе будут называться \linkterm{users}{пользователями} системы.
-Такое решение позволит получать большое количество актуальной информации, но в следствие отсутствия профессиональной подготовки волонтёров точность такой информации снизится.
-Также возможно возникновение случаев необходимости модерации присланных волонтёрами данных.
-
-\nwln
-В качестве меры модерации предлагается необходимость регистрации волонтёров при помощи подтверждённого адреса электронной почты (в последствии возможно добавление других методов авторизации), а также наличие возможности редактирования и удаления всех загруженных данных.
-Кроме того, для предоставления возможности связи с волонтёрами, в каждый отчёт необходимо включить информацию о пользователе, совершившем наблюдение, описанное в отчёте.
-Люди, в обязанности которых будет входить модерация отчётов и взаимодействие с пользователями в данной работе будут называться \linkterm{admins}{администраторами} системы.
-
-\nwln
-В качестве меры повышения точности присланных волонтёрами данных предлагается создание автоматической системы распознавания определённых видов растений на фотографиях, а также ручная проверка присланных пользователями данных.
-Люди, в обязанности которых будет входить проверка и обработка присланных данных в данной работе будут называться \linkterm{specialists}{специалистами} системы. \\
-
-\subsection{Доступ к данным}
-
-\tab
-Для охвата более широкой группы добровольцев и их удобства необходима возможность отложенной отправки данных в случае, если пользователь находится вне зоны действия сети.
-Этого возможно добиться при помощи создания мобильных приложений для операционных систем iOS и Android.
-Также необходимо наличие вебинтерфейса отправки данных для пользователей, не желающих устанавливать приложение.
-Кроме того желательно предоставление возможности интеграции системы со сторонними клиентскими приложениями путём создания документированного API для отправки данных в систему.
-
-\nwln
-Для осуществления модерации и обработки данных требуется создание сервисного вебинтерфейса, который далее в данной работе будет называться \linkterm{servicesite}{сервисный сайт} системы.
-Также для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения обработанных данных в формате \textquote{CSV}.
-Также желательно наличие возможности демонстрации статистики собранных данных на сторонних сайтах путём создания документированного API для демонстрации данных, загруженных в систему. \\
+Предлагается использование трёх статусов: \textquote{необработано}, \textquote{актуально}, \textquote{неактуально}; в зависимости от ситуации и цели наблюдения возможно добавление и других. \\
 
 \subsection{Существующие решения}
 
@@ -54,7 +25,7 @@
 Для того, чтобы определить, нельзя ли вместо создания нового использовать готовое решение или его фрагменты, было произведено сравнение систем с аналогичной или похожей функциональностью по нескольким критериям.
 
 \nwln
-Поиск аналогов производился среди систем, которые используются экологами для фиксации месторасположения борщевика в настоящий момент, а также по ключевым словам “фотофиксация растений”, “поиск и фотофиксация”, а также “составление пользовательских карт”.
+Поиск аналогов производился среди систем, которые в настоящий момент используются экологами для фиксации месторасположения борщевика, а также в интернете по ключевым словам \textquote{фотофиксация растений}, \textquote{поиск и фотофиксация}, а также \textquote{составление пользовательских карт}.
 В качестве аналогов были выбраны сервисы, позволяющие отмечать что-либо на карте, производить поиск растений или же просто собирать и обрабатывать пользовательские данные.
 
 \begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
@@ -89,20 +60,20 @@
 \end{enumerate}
 
 \nwln
-Для сравнения аналогов были использованы следующие критерии, основанные на анализе предметной области:
+Для сравнения аналогов были использованы следующие критерии:
 
 \begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-	\item Полнота данных -- возможность хранения всех необходимых для отчётов данных, а именно: фотографию и краткое описание растения, описание места его произрастания, географические координаты, дату и время обнаружения, данные о пользователе, который его произвёл, и текущий статус отчета.
-	\item Обработка данных -- возможность проверки принадлежности растений к отслеживаемым видам, а также обработки данных.
+	\item Полнота данных -- возможность хранения всех необходимых для отчётов данных, а именно: фотографию и краткое описание растения и места его произрастания, географические координаты, дату и время обнаружения, данные о пользователе, который его произвёл, и текущий статус отчёта.
+	\item Обработка данных -- возможность проверки принадлежности растений к отслеживаемым видам, а также работы с данными.
 	\item Мобильный интерфейс -- возможность отправки отчётов в систему как при помощи приложений для операционных систем iOS и Android так и при помощи вебинтерфейса, а также существование API для сбора данных.
 	\item Доступ к данным -- возможность выгрузки и сохранения данных в формате “CSV”, наличие демонстрации статистики собранных данных на сайте, а также наличие API для демонстрации данных.
 	\item Модерация данных -- возможность модерирования данных, управления аккаунтами пользователей, а также связи с пользователями при помощи подтверждённых при регистрации методов.
 \end{itemize}
 
 \nwln
-Результаты сравнения существующих аналогов приведены в таблице 1.
+Результаты сравнения существующих аналогов приведены в таблице 1. \\
 \tableone
 
 \nwln
 Из анализа соответствия существующих аналогов необходимым критериям становится очевидно, что на данный момент не существует системы, предоставляющей требуемую функциональность в полном объёме.
-Вследствие этого было принято решение о необходимости разработки такой системы. 
+Вследствие этого было принято решение о необходимости разработки такой системы.
