--- a/report/plan.tex
+++ b/report/plan.tex
@@ -1,18 +1,20 @@
+% !TeX spellcheck = russian-aot
+
 \begin{center}
-	\textbf{
+	\titlelongtext{\textbf{
 		КАЛЕНДАРНЫЙ ПЛАН ВЫПОЛНЕНИЯ \\
 		ВЫПУСКНОЙ КВАЛИФИКАЦИОННОЙ РАБОТЫ
-	}
+	}}
 
-	\vspace*{2cm}
+	\vspace*{1.5cm}
 
 	\confirmation
 
-	\vspace*{3cm}
+	\vspace*{1.5cm}
 	
 	\worktitle
 
-	\vspace*{4cm}
+	\vspace*{1cm}
 	
 	\begin{tabularx}{\textwidth}{ l X l }
 		№ п/п & Наименование работ & Срок выполнения \\
@@ -24,10 +26,7 @@
 		6 & Оформление иллюстративного материала & \\
 	\end{tabularx}
 
-	\vspace*{3.5cm}
+	\vspace*{5cm}
 
 	\subsblock
 \end{center}
-
-\thispagestyle{empty}
-\clearpage
