--- a/report/tables.tex
+++ b/report/tables.tex
@@ -1,3 +1,5 @@
+% !TeX spellcheck = russian-aot
+
 \newcommand{\tableone}{
 	\begin{xltabular}{\textwidth}{ | l | c | c | c | c | c | }
 		\longcaption{Результаты сравнения аналогов}
