--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -1,5 +1,6 @@
-\clearpage
-\newcont{Список Литературы}
+% !TeX spellcheck = russian-aot
+
+\newcont*{Список Литературы}
 
 \bibliographystyle{unsrtnat}
 
@@ -8,19 +9,25 @@
 	https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7194640/
 	\bibitem{invasive-plants}
 	https://www.sciencedaily.com/releases/2022/02/220210125820.htm
-	
-	\bibitem{heracleum}
-	https://cyberleninka.ru/article/n/borschevik-sosnovskogo-v-rossiyskoy-federatsii/viewer
+	\bibitem{heracleum} https://cyberleninka.ru/article/n/borschevik-sosnovskogo-v-rossiyskoy-federatsii/viewer
 	\webbibitem{rivr}{https://ib.komisc.ru/add/rivr}{Официальный сайт проекта РИВР}{26.12.2021}
 	\webbibitem{esquire}{https://esquire.ru/articles/5849-cow-parsnip}{Статья в журнале Esquire, посвященная борщевику Cосновского}{12.01.2022}
-	
-	\bibitem{control}
-	Словарь русского языка [Текст]: толковый словарь современного русского литературного языка / С. И. Ожегов, ред. Н. Ю. Шведова – 16-е изд., исправленное. – Москва: Русский язык, 1984. – 251 с.
 	
 	\webbibitem{googlemymaps}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
 	\webbibitem{inaturalist}{https://www.google.com/maps/about/mymaps}{Страница с описанием сервиса Google MyMaps}{26.12.2021}
 	\webbibitem{plantfinder}{https://www.plantsmap.com/finder/plants}{Страница с описанием сервиса Plant Finder}{26.12.2021}
 	\webbibitem{floraincognita}{https://floraincognita.com}{Официальный сайт сервиса Flora Incognita}{11.01.2022}
+	
+	
+	
+	\bibitem{postgis-vs-mongo} Bartoszewski, Dominik \& Piórkowski, Adam \& Lupa, Michał. (2019). The Comparison of Processing Efficiency of Spatial Data for PostGIS and MongoDB Databases. 10.1007/978-3-030-19093-4\_22.
+	\webbibitem{flutter-vs-react}{https://dergipark.org.tr/en/download/article-file/1607441}{Сравнение
+	популярных фреймворков для кроссплатформенной разработки}{18.05.2022}
+	\webbibitem{flutter-better}{http://www.diva-portal.org/smash/get/diva2:1442804/FULLTEXT01.pdf}{Оценка производительности популярных фреймворков для кроссплатформенной разработки}{18.05.2022}
+	\webbibitem{bloc-better}{https://flutterdevs.com/blog/bloc-pattern-in-flutter-part-1}{Описание архитектуры BLoC}{18.05.2022}
+	\bibitem{convolutional-better} Shamsaldin, Ahmed \& Fattah, Polla \& Rashid, Tarik \& Al-Salihi, Nawzad. (2019). The Study of The Convolutional Neural Networks Applications. UKH Journal of Science and Engineering. 3. 31-40. 10.25079/ukhjse.v3n2y2019.pp31-40.
+	\bibitem{tensorflow-better} Kiran, T. Tritva Jyothi, Computer Vision Accuracy Analysis with Deep Learning Model Using TensorFlow (JULY 22, 2020). International Journal of Innovative Research in Computer Science \& Technology (IJIRCST) ISSN: 2347-5552, Volume, 8, Issue, 4, July, 2020, Available at SSRN: \href{https://ssrn.com/abstract=3673214}{https://ssrn.com/abstract=3673214} or \href{http://dx.doi.org/10.2139/ssrn.3673214}{http://dx.doi.org/10.2139/ssrn.3673214} 
+	\webbibitem{xception-better}{https://arxiv.org/abs/1610.02357}{Описание модели XCeption свёрточной нейронной сети, обученной на наборе данных ImageNet}{18.05.2022}
 	
 	
 	
