--- a/report/requirements.tex
+++ b/report/requirements.tex
@@ -1,17 +1,74 @@
+% !TeX spellcheck = russian-aot
+
 \section{Формулировка требований и постановка задачи}
-
-\subsection{Формулировка требований}
-
-Этот сервис должен удовлетворять требованиям, описанным в пункте “Критерии сравнения аналогов”.
-Сервис должен обладать следующей функциональностью:
-\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-	\item У группы пользователей-волонтеров должна быть возможность отправлять данные о местонахождении встреченного ими потенциально опасного растения.
-	\item Для удобства отправки данных необходимо наличие как web-интерфейса, так и мобильного интерфейса (приложения) для платформ Android и iOS, позволяющего откладывать отправку в случае нахождения устройства вне зоны действия сети.
-	\item У группы экологов-администраторов должна быть возможность хранить, обрабатывать, а так же модерировать (в случае их неподобающего содержания) полученные данные.
-\end{itemize}
 
 \subsection{Постановка задачи}
 
-\subsection{Сценарии использования}
+\tab
+Необходимо разработать систему, позволяющую осуществлять наблюдение за распространением потенциально опасных для человека растений.
+
+\subsection{Формулировка требований}
 
 \tab
+Такая система должна соответствовать всем критериям, использованным для сравнения аналогов.
+
+\subsection{Выбор метода решения}
+
+\tab
+В качестве источника информации и средства наблюдения предлагается использовать неограниченное количество волонтёров, заинтересованных в решении экологических проблем.
+Эти люди в данной работе будут называться \linkterm{users}{пользователями} системы.
+Такое решение позволит получать большое количество актуальной информации, но в следствие отсутствия профессиональной подготовки волонтёров точность такой информации снизится.
+Также возможно возникновение случаев необходимости модерации присланных волонтёрами данных.
+
+\nwln
+В качестве меры модерации предлагается необходимость регистрации волонтёров при помощи подтверждённого адреса электронной почты (в последствии возможно добавление других методов авторизации), а также наличие возможности редактирования и удаления всех загруженных данных.
+Кроме того, для предоставления возможности связи с волонтёрами, в каждый отчёт необходимо включить информацию о пользователе, совершившем наблюдение, описанное в отчёте.
+Люди, в обязанности которых будет входить модерация отчётов и взаимодействие с пользователями в данной работе будут называться \linkterm{admins}{администраторами} системы.
+
+\nwln
+В качестве меры повышения точности присланных волонтёрами данных предлагается создание автоматической системы распознавания определённых видов растений на фотографиях, а также ручная проверка присланных пользователями данных.
+Желательно повысить точность предварительной автоматической фильтрации фотографий до 90\% или выше, при этом размер модели нейронной сети не должен превышать 100 mb, что позволит использование её в клиентских приложениях.
+Люди, в обязанности которых будет входить проверка и работа с присланными данными в данной работе будут называться \linkterm{specialists}{специалистами} системы.
+
+\nwln
+Для охвата более широкой группы добровольцев и их удобства необходима возможность отложенной отправки данных в случае, если пользователь находится вне зоны действия сети.
+Этого возможно добиться при помощи создания мобильных приложений для операционных систем iOS и Android.
+Также необходимо наличие вебинтерфейса отправки данных для пользователей, не желающих устанавливать приложение.
+Кроме того желательно предоставление возможности интеграции системы со сторонними клиентскими приложениями путём создания документированного API для отправки данных в систему.
+
+\nwln
+Для осуществления модерации и работы с данными требуется создание сервисного вебинтерфейса, который далее в данной работе будет называться \linkterm{servicesite}{сервисный сайт} системы.
+Также для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения обработанных данных в формате \textquote{CSV}.
+Также желательно наличие возможности демонстрации статистики собранных данных на сторонних сайтах путём создания документированного API для демонстрации данных, загруженных в систему. \\
+
+\subsection{Выбор технологий и архитектуры}
+
+\tab
+Во ходе выбора технологий особое внимание было уделено лицензии, под которой распространяется их исходный код, так как распространение конечного продукта планируется под открытой лицензией.
+
+\nwln
+Для реализации сервиса была выбрана клиент-серверная архитектура. Схема архитектуры представлена на рисунке 1. \\
+\pictureone
+
+\tab
+Серверная часть системы была написана на языке программирования Python с использованием фреймворка Django.
+Такой выбор обусловлен тем, что этот фреймворк с одной стороны предлагает единый интерфейс доступа к различным базам данных, что будет полезно в случае необходимости изменения СУБД, а с другой стороны удовлетворяет необходимость создания графического пользовательского интерфейса для администраторов приложения, автоматически генерируя сервисный сайт.
+
+\nwln
+В качестве системы управления базами данных была использована PostgreSQL, так как она распространяется под открытой лицензией, а также имеет специальные геометрические типы данных, которые можно использовать для работы с географическими координатами.
+Для работы с ними также используется программа PostGIS.
+Она предоставляет увеличение скорости работы до 2.5 раз по сравнению с аналогами (например, MongoDB) при работе со сложными запросами к геометрическим данным (например, вычислений расстояния между точками)\cite{postgis-vs-mongo}.
+
+\nwln
+Код приложения-клиента был написан на языке Dart с использованием фреймворка Flutter\cite{flutter-vs-react}.
+Такой выбор обусловлен необходимостью одновременной разработки для мобильных платформ и WEB-браузеров.
+Разработка единой кодовой базы для всех платформ позволяет сократить время разработки, а также бюджет и расходы на поддержку проекта.
+Фреймворк Flutter распространяется под открытой лицензией, а также позволяет создать одинаковый пользовательский интерфейс для всех платформ и добиться высокой производительности на каждой из них, что улучшает опыт пользователя\cite{flutter-better}.
+
+\nwln
+Для хранения и передачи пользовательских данных в клиентском приложении была выбрана архитектура BLoC\cite{bloc-better}, специально разработанная для этого фреймворка, и позволяющая отделить бизнес-логику программы от пользовательского интерфейса, что в свою очередь приведёт к меньшим временным и финансовым затратам на тестирование программы.
+
+\nwln
+В качестве средства повышения точности присланных пользователями данных была выбрана свёрточная нейронная сеть\cite{convolutional-better}, так как она позволяет достаточно точно произвести классификацию фотографий.
+Для реализации нейронной сети был выбран фреймворк TensorFlow\cite{tensorflow-better}, так как он распространяется под открытой лицензией, а также позволяет достичь достаточно высоких показателей точности классификации изображений.
+В качестве модели для применения технологии transfer learning была выбрана модель XCeption\cite{xception-better}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
