--- a/report/task.tex
+++ b/report/task.tex
@@ -1,37 +1,45 @@
+% !TeX spellcheck = russian-aot
+
 \begin{center}
-	\textbf{
+	\titlelongtext{\textbf{
 		ЗАДАНИЕ \\
 		НА ВЫПУСКНУЮ КВАЛИФИКАЦИОННУЮ РАБОТУ
-	}
+	}}
 
-	\vspace*{2cm}
+	\vspace*{1.5cm}
 
 	\confirmation
 
-	\vspace*{2.5cm}
+	\vspace*{1.5cm}
 	
-	\worktitle
-	\begin{tabularx}{\textwidth}{ X }
-		Место выполнения ВКР: СПбГЭТУ «ЛЭТИ» кафедра МО ЭВМ \\
+	\worktitle{
+		Место выполнения ВКР: \\
+		\titlelongtext{
+			Санкт-Петербургский государственный электротехнический университет «ЛЭТИ» им. В.И. Ульянова (Ленина)
+		}
 		Исходные данные (технические требования): \\
-		кратко указываются основные требования к ВКР \\
+		\titlelongtext{
+			Кратко указываются основные требования к ВКР
+		}
 		Содержание ВКР: \\
-		Кратко перечисляются основные разделы ВКР \\
-		Перечень отчетных материалов: пояснительная записка, \\ иллюстративный материал, иные отчетные материалы \\
-		Дополнительные разделы: указывается наименование \\ дополнительного раздела
-	\end{tabularx}
+		\titlelongtext{
+			Кратко перечисляются основные разделы ВКР
+		}
+		Перечень отчетных материалов: \\
+		\titlelongtext{
+			Пояснительная записка, иллюстративный материал.
+		}
+		Дополнительные разделы: Охрана окружающей среды
+	}
 
-	\vspace*{2cm}
+	\vspace*{1.5cm}
 	
 	\begin{tabularx}{\textwidth}{ X X }
 		Дата выдачи задания & Дата представления ВКР к защите \\
 		\emptydate & \emptydate
 	\end{tabularx}
 
-	\vspace*{2.5cm}
+	\vspace*{1.5cm}
 
 	\subsblock
 \end{center}
-
-\thispagestyle{empty}
-\clearpage
