--- a/report/title.tex
+++ b/report/title.tex
@@ -1,17 +1,19 @@
+% !TeX spellcheck = russian-aot
+
 \begin{center}
-	\fontsize{13}{15.6}\textbf{
+	\titlelongtext{\fontsize{13}{15.6}\textbf{
 		«Санкт-Петербургский государственный электротехнический университет \\
 		«ЛЭТИ» им. В.И.Ульянова (Ленина)» \\
 		(СПбГЭТУ «ЛЭТИ»)
-	}
+	}}
 
 	\vspace*{2cm}
 
 	\setlength{\extrarowheight}{0.25cm}
-	\begin{tabularx}{\textwidth}{ X X }
-		\textbf{Направление} & 09.03.04 \\
-		\textbf{Профиль} & Программная инженерия \\
-		\textbf{Факультет} & ФКТИ \\
+	\begin{tabularx}{\textwidth}{ l X }
+		\textbf{Направление} & 09.03.04 Программная инженерия \\
+		\textbf{Профиль} & Разработка программно-информационных систем \\
+		\textbf{Факультет} & КТИ \\
 		\textbf{Кафедра} & МО ЭВМ \\
 		\textit{К защите допустить} & \\
 		Зав. кафедрой & {\raggedleft{Кринкин К. В.}}
@@ -19,26 +21,26 @@
 
 	\vspace*{3cm}
 	
-	\fontsize{18}{21.6}\textbf{
+	\titlelongtext{\fontsize{18}{21.6}{\textbf{
 		ВЫПУСКНАЯ КВАЛИФИКАЦИОННАЯ РАБОТА \\
 		БАКАЛАВРА
-	}
+	}}}
+	
 
 	\vspace*{1cm}
 	
-	\textbf{
-		Тема: наименование темы
-	}
+	\titlelongtext{\textbf{
+		Тема: \MakeUppercase{Разработка программной системы наблюдения за распространением потенциально опасных для человека видов растений}
+	}}
 
-	\vspace*{5cm}
+	\vspace*{3.5cm}
 	
 	\subsblock
 
-	\vspace*{4.5cm}
+	\vspace*{2cm}
 	
 	Санкт-Петербург \\
 	2022
 \end{center}
 
 \thispagestyle{empty}
-\clearpage
