report start + end done

--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -40,10 +40,9 @@
 	\bibitem{mos-expenses} https://www.agroinvestor.ru/business-pages/34172-sovremennye-metodiki-sposobny-sokratit-raskhody-na-borbu-s-borshchevikom-v-neskolko-raz/
 	\bibitem{len-expenses} https://www.lenoblzaks.ru/publics/single/115/63977
 	\bibitem{rural-measures} https://fsvps.gov.ru/ru/fsvps/news/36717.html
-	\bibitem{countryside-measures} "Земельный кодекс Российской Федерации" от 25.10.2001 N 136-ФЗ (ред. от 01.05.2022)
-	\bibitem{rural-law} 
-	Федеральный закон "Об обороте земель сельскохозяйственного назначения" от 24.07.2002 N 101-ФЗ
+	\bibitem{countryside-measures} "Земельный кодекс Российской Федерации" от 25.10.2001 N 136-ФЗ, статья 42 (ред. от 01.05.2022)
+	\bibitem{rural-fine} "Кодекс Российской Федерации об административных правонарушениях" от 30.12.2001 N 195-ФЗ (ред. от 16.04.2022) (с изм. и доп., вступ. в силу с 27.04.2022), статья 8.7
+	\bibitem{rural-law} Федеральный закон "Об обороте земель сельскохозяйственного назначения" от 24.07.2002 N 101-ФЗ
 	\webbibitem{business-online}{https://www.business-gazeta.ru/article/412341}{Пересказ заседания Государственного Совета, опубликованный в газете Бизнес Online}{17.05.2022}
-	\bibitem{govern-law} Распоряжение от 25 ноября 2019 г. N 35-р об утверждении методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций	
 	\bibitem{nature-law} Распоряжение Минприроды России от 25.11.2019 N 35-р "Об утверждении Методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций"
 \end{thebibliography}
