--- a/report/overview.tex
+++ b/report/overview.tex
@@ -42,21 +42,14 @@
 	Позволяет создавать карты с набором пользовательских отметок и их описанием, доступ к таким картам осуществляется так же, как к файлам, хранящимся на Google Drive.
 	Также позволяет единовременно импортировать данные их .csv файла или из Google SpreadSheets.
 	\item Plant Finder \\
-	Plant Finder\cite{plantfinder} - сервис, созданный для документации и
-	учета мест произрастания и хранения растений. Сервис
-	предоставляет пользователям возможность отмечать на
-	карте места собранных ими коллекций растений. Также
-	для пользователей доступна возможность создания
-	частных карт с пользовательским набором растений. На
-	таких частных картах есть возможность открытия
-	публичного доступа к отметкам и данным.
+	Plant Finder\cite{plantfinder} - сервис, созданный для документации и учёта мест произрастания и хранения растений.
+	Сервис предоставляет пользователям возможность отмечать на карте места собранных ими коллекций растений.
+	Также для пользователей доступна возможность создания частных карт с пользовательским набором растений.
+	На таких частных картах есть возможность открытия публичного доступа к отметкам и данным.
 	\item Flora Incognita \\
-	Flora Incognita\cite{floraincognita} - приложение, позволяющее
-	идентифицировать и сохранять данные о найденных
-	растениях. Оно разработано совместно с Technische
-	Universität Ilmenau и Max-Planck-Institut für Biogeochemie.
-	Также в приложении доступно описание каждого
-	растения, которое оно может идентифицировать.
+	Flora Incognita\cite{floraincognita} - приложение, позволяющее идентифицировать и сохранять данные о найденных растениях.
+	Оно разработано совместно с \de{Technische Universität Ilmenau} и \de{Max-Planck-Institut für Biogeochemie}.
+	Также в приложении доступно описание каждого растения, которое оно может идентифицировать.
 \end{enumerate}
 
 \nwln
