--- a/report/report.tex
+++ b/report/report.tex
@@ -3,11 +3,11 @@
 
 \documentclass[14pt]{extreport}
 
-\usepackage[legalpaper, left=3cm, right=1.5cm, top=2.5cm, bottom=1.5cm, includefoot, footskip=1cm]{geometry}
+\usepackage[legalpaper, left=3cm, right=1.5cm, top=2cm, bottom=1.25cm, includefoot]{geometry}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1, T2A]{fontenc}
-\usepackage[english, russian]{babel}
+\usepackage[main=russian, english, german]{babel}
 \usepackage{tempora, newtxmath}
 
 \usepackage{tabularx, xltabular, multirow, makecell}
