--- a/report/support.tex
+++ b/report/support.tex
@@ -63,6 +63,9 @@
 \newcommand{\tab}{\hspace{0.5cm}}
 \newcommand{\nwln}{\vspace{\baselineskip}\tab}
 
+\newcommand{\en}[1]{\foreignlanguage{english}{#1}}
+\newcommand{\de}[1]{\foreignlanguage{german}{#1}}
+
 \newcommand{\longcaption}[1]{
 	\caption{#1}
 	\addtocounter{table}{-1}
