--- a/report/additional.tex
+++ b/report/additional.tex
@@ -34,7 +34,7 @@
 \end{enumerate}
 
 \nwln
-Несоблюдение изложенных выше мер влечёт наложение административного штрафа в размере:
+Несоблюдение изложенных выше мер влечёт наложение административного штрафа\cite{rural-fine} в размере:
 \begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
 	\item От двадцати до пятидесяти тысяч рублей для граждан;
 	\item От пятидесяти до ста тысяч рублей для административных лиц;
@@ -45,7 +45,7 @@
 При обнаружении борщевика Сосновского на участке земли сельскохозяйственного назначения\cite{rural-law} граждане вправе обратиться в территориальное управление Россельхознадзора для принятия мер в установленном законодательством порядке.
 
 \nwln
-Также предприятия, сфера деятельности которых распространяется на обширные участки необработанных территорий\cite{govern-law} обязаны создавать программы сохранения биологического разнообразия сельскохозяйственных или других мероприятий\cite{nature-law}.
+Также предприятия, сфера деятельности которых распространяется на обширные участки необработанных территорий обязаны создавать программы сохранения биологического разнообразия сельскохозяйственных или других мероприятий\cite{nature-law}.
 
 \nwln
 Благодаря возможности описанного в данной работе программного обеспечения предоставлять возможность отслеживания распространения потенциально опасных растений, а также каталогизации и хранения полученной информации, оно может быть использовано как на уровне города, области или региона профессиональными экологами или представителями государственных органов, так и в рамках программы сохранения биологического разнообразия на отдельном предприятии.
