report sections done

--- a/report/description.tex
+++ b/report/description.tex
@@ -7,23 +7,47 @@
 \tab
 Были разработаны следующие сценарии использования решения:
 
-/\ /\ TODO: under construction.
-
 \begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-	\item \textit{Просмотр опубликованной отсортированной информации о наблюдениях} \\
+	\item \textit{Просмотр пользователем опубликованной отсортированной информации о наблюдениях} \\
 	Действующее лицо: пользователь. \\
 	Основной сценарий:
 	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-		\item На основной странице приложения пользователь нажимает кнопку «Данные по операциям»
-		\item Пользователь нажимает выбирает из выпадающего списка изделие, после чего пользователю отображается список операций, которые были введены с этим изделием, текущие нормы и нормы, рассчитанные исходя из выработки сотрудников.
+		\item Пользователь открывает приложение клиент.
+		\item Пользователь нажимает на один из указателей на карте, ему демонстрируются подробные сведения об отчёте и комментарии к нему.
+		\item По желанию пользователь нажимает на фотографии, прикреплённые к отчёту и просматривает их увеличенную версию.
 	\end{itemize}
-	Результат: Пользователь посмотрел данные со всей информацией по операциям конкретного изделия.
-	\item \textit{Просмотр опубликованной отсортированной информации о наблюдениях} \\
+	Результат: Пользователь ознакомился как с общей статистикой распространения потенциально опасных растений на карте, так и с заинтересовавшими его конкретными отчётами.
+	
+	\item \textit{Просмотр пользователем информации о системе, её задачах и краткого руководства по использованию} \\
 	Действующее лицо: пользователь. \\
 	Основной сценарий:
 	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-		\item На основной странице приложения пользователь нажимает кнопку «Данные по операциям»
-		\item Пользователь нажимает выбирает из выпадающего списка изделие, после чего пользователю отображается список операций, которые были введены с этим изделием, текущие нормы и нормы, рассчитанные исходя из выработки сотрудников.
+		\item На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{About}}, ему демонстрируется информация о системе, её задачах и краткое руководство по использованию.
 	\end{itemize}
 	Результат: Пользователь посмотрел данные со всей информацией по операциям конкретного изделия.
-\end{itemize} 
+	
+	\item \textit{Авторизация пользователя в системе} \\
+	Действующее лицо: пользователь. \\
+	Условие: На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{Account}} ИЛИ на основной странице приложения нажимает на кнопку справа внизу с символом \textquote{+}. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+		\item Открывается страница авторизации пользователя.
+	\end{itemize}
+	Результат: Пользователь авторизован в системе и может выполнять требующие авторизации сценарии.
+\end{itemize}
+
+\subsection{Пользовательский интерфейс}
+
+\subsection{Модель базы данных}
+
+\subsection{Серверная часть ПО}
+
+\subsection{API серверной части ПО}
+
+\subsection{Клиентская часть ПО}
+
+\subsection{Система автоматической проверки изображений}
+
+\subsection{Процесс установки и запуска системы}
+
+\subsection{Непрерывная интеграция и развёртывание}
