--- a/report/document.tex
+++ b/report/document.tex
@@ -8,6 +8,7 @@
 	\include{overview}
 	\include{requirements}
 	\include{description}
+	\include{tests}
 	\include{additional}
 	\include{conclusion}
 	
