--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -9,8 +9,8 @@
 
 \nwln
 В европейской части России одним из самых опасных растений является борщевик Сосновского\cite{heracleum}, поэтому в данной работе наблюдение за распространением потенциально опасных растений рассматривается на его примере.
-Согласно данным из открытой базы данных РИВР\cite{rivr} на территории Санкт-Петербурга и Ленинградской области насчитывается более 350 очагов распространения Heracleum sosnowskyi.
-По данным, опубликованным в журнале Esquire\cite{esquire} борщевик занимает до 15\% природных ландшафтов европейской части России.
+Согласно данным из открытой базы данных РИВР\cite{rivr} на территории Санкт-Петербурга и Ленинградской области насчитывается более 350 очагов распространения \la{Heracleum sosnowskyi}.
+По данным, опубликованным в журнале \en{Esquire}\cite{esquire} борщевик занимает до 15\% природных ландшафтов европейской части России.
 
 \nwln
 На сегодняшний день не существует специализированного автоматизированного компьютерного решения для контроля над распространением потенциально опасных видов растений, которое, помимо наблюдения и каталогизации, включало бы в себя взаимодействие с группами специалистов, способными устранить и остановить очаги распространения.
