--- a/report/overview.tex
+++ b/report/overview.tex
@@ -29,25 +29,25 @@
 В качестве аналогов были выбраны сервисы, позволяющие отмечать что-либо на карте, производить поиск растений или же просто собирать и обрабатывать пользовательские данные.
 
 \begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-	\item iNaturalist \\
-	iNaturalist\cite{inaturalist} - сервис для наблюдения за живыми организмами, разработанный Калифорнийской академией наук совместно с National Geographic.
+	\item \en{iNaturalist} \\
+	\en{iNaturalist}\cite{inaturalist} - сервис для наблюдения за живыми организмами, разработанный Калифорнийской академией наук совместно с \en{National Geographic}.
 	Сервис позволяет глобальному сообществу волонтёров наблюдать за живыми организмами и присылать собранную информацию о них на сайт.
 	Такие отчёты находятся в общем доступе и могут быть загружены с официального сайта.
 	\item РИВР \\
 	РИВР\cite{rivr} (распространение инвазивных видов растений) - открытая база данных, разработанная и поддерживаемая ИБ Коми НЦ УрО РАН.
 	Посвящена исключительно Борщевику Сосновского и его распространению на территории России.
 	Позволяет пользователям отправлять данные о найденных местах произрастания растения, которые на данный момент доступны только для просмотра на сайте.
-	\item Google MyMaps \\
-	Google MyMaps\cite{googlemymaps} - это сервис для создания пользовательских карт на основе сервиса Google Maps.
-	Позволяет создавать карты с набором пользовательских отметок и их описанием, доступ к таким картам осуществляется так же, как к файлам, хранящимся на Google Drive.
-	Также позволяет единовременно импортировать данные их .csv файла или из Google SpreadSheets.
-	\item Plant Finder \\
-	Plant Finder\cite{plantfinder} - сервис, созданный для документации и учёта мест произрастания и хранения растений.
+	\item \en{Google MyMaps} \\
+	\en{Google MyMaps}\cite{googlemymaps} - это сервис для создания пользовательских карт на основе сервиса \en{Google Maps}.
+	Позволяет создавать карты с набором пользовательских отметок и их описанием, доступ к таким картам осуществляется так же, как к файлам, хранящимся на \en{Google Drive}.
+	Также позволяет единовременно импортировать данные их .csv файла или из \en{Google SpreadSheets}.
+	\item \en{Plant Finder} \\
+	\en{Plant Finder}\cite{plantfinder} - сервис, созданный для документации и учёта мест произрастания и хранения растений.
 	Сервис предоставляет пользователям возможность отмечать на карте места собранных ими коллекций растений.
 	Также для пользователей доступна возможность создания частных карт с пользовательским набором растений.
 	На таких частных картах есть возможность открытия публичного доступа к отметкам и данным.
-	\item Flora Incognita \\
-	Flora Incognita\cite{floraincognita} - приложение, позволяющее идентифицировать и сохранять данные о найденных растениях.
+	\item \la{Flora Incognita} \\
+	\la{Flora Incognita}\cite{floraincognita} - приложение, позволяющее идентифицировать и сохранять данные о найденных растениях.
 	Оно разработано совместно с \de{Technische Universität Ilmenau} и \de{Max-Planck-Institut für Biogeochemie}.
 	Также в приложении доступно описание каждого растения, которое оно может идентифицировать.
 \end{enumerate}
@@ -58,7 +58,7 @@
 \begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
 	\item Полнота данных -- возможность хранения всех необходимых для отчётов данных, а именно: фотографию и краткое описание растения и места его произрастания, географические координаты, дату и время обнаружения, данные о пользователе, который его произвёл, и текущий статус отчёта.
 	\item Обработка данных -- возможность проверки принадлежности растений к отслеживаемым видам, а также работы с данными.
-	\item Мобильный интерфейс -- возможность отправки отчётов в систему как при помощи приложений для операционных систем iOS и Android так и при помощи вебинтерфейса, а также существование API для сбора данных.
+	\item Мобильный интерфейс -- возможность отправки отчётов в систему как при помощи приложений для операционных систем iOS и \en{Android} так и при помощи web интерфейса, а также существование API для сбора данных.
 	\item Доступ к данным -- возможность выгрузки и сохранения данных в формате “CSV”, наличие демонстрации статистики собранных данных на сайте, а также наличие API для демонстрации данных.
 	\item Модерация данных -- возможность модерирования данных, управления аккаунтами пользователей, а также связи с пользователями при помощи подтверждённых при регистрации методов.
 \end{itemize}
