--- a/report/support.tex
+++ b/report/support.tex
@@ -31,10 +31,12 @@
 		& & \@subscript{(подпись)} & \\
 		Руководитель & \centering{к.т.н., доцент} & & Заславский М. М. \\ \cline{3-3}
 		& \@subscript{(Уч. степень, уч. звание)} & \@subscript{(подпись)} & \\
-		Консультант & & & Черепанов И. В. \\ \cline{3-3}
-		& & \@subscript{(подпись)} & \\
+		Консультант & \centering{асс. каф. ИЗОС} & & Контрош Л. В. \\ \cline{3-3}
+		& \@subscript{(Уч. степень, уч. звание)} & \@subscript{(подпись)} & \\
 		Консультант & \centering{к.т.н., доцент} & & Заславский М. М. \\ \cline{3-3}
 		& \@subscript{(Уч. степень, уч. звание)} & \@subscript{(подпись)} & \\
+		Консультант & & & Черепанов И. В. \\ \cline{3-3}
+		& & \@subscript{(подпись)} & \\
 	\end{tabularx}
 }
 
@@ -65,6 +67,7 @@
 
 \newcommand{\en}[1]{\foreignlanguage{english}{#1}}
 \newcommand{\de}[1]{\foreignlanguage{german}{#1}}
+\newcommand{\la}[1]{\foreignlanguage{latin}{#1}}
 
 \newcommand{\longcaption}[1]{
 	\caption{#1}
