--- a/report/additional.tex
+++ b/report/additional.tex
@@ -49,7 +49,7 @@
 
 \nwln
 Благодаря возможности описанного в данной работе программного обеспечения предоставлять возможность отслеживания распространения потенциально опасных растений, а также каталогизации и хранения полученной информации, оно может быть использовано как на уровне города, области или региона профессиональными экологами или представителями государственных органов, так и в рамках программы сохранения биологического разнообразия на отдельном предприятии.
-Для этого серверная часть ПО снабжена упрощённой системой установки (см. п. ???), позволяющей развернуть её при помощи нескольких консольных команд и снижающей список ее зависимостей до bash, Docker и docker-compose, а клиентская часть поддерживает сборку для различных платформ, устройств и серверов.
+Для этого серверная часть ПО снабжена упрощённой системой установки (см. п. ???), позволяющей развернуть её при помощи нескольких консольных команд и снижающей список ее зависимостей до \en{bash}, \en{Docker} и \en{docker-compose}, а клиентская часть поддерживает сборку для различных платформ, устройств и серверов.
 
 \nwln
 В рамках работы с предлагаемым ПО на предприятиях возможно уменьшение времени реагирования руководства на сообщения сотрудников о произрастающих на территории сорных растениях и упрощение обработки очагов их произрастания и проведения профилактических мер.
