--- a/report/report.tex
+++ b/report/report.tex
@@ -7,7 +7,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1, T2A]{fontenc}
-\usepackage[main=russian, english, german]{babel}
+\usepackage[main=russian, english, german, latin]{babel}
 \usepackage{tempora, newtxmath}
 
 \usepackage{tabularx, xltabular, multirow, makecell}
