--- a/report/requirements.tex
+++ b/report/requirements.tex
@@ -32,12 +32,12 @@
 
 \nwln
 Для охвата более широкой группы добровольцев и их удобства необходима возможность отложенной отправки данных в случае, если пользователь находится вне зоны действия сети.
-Этого возможно добиться при помощи создания мобильных приложений для операционных систем iOS и Android.
-Также необходимо наличие вебинтерфейса отправки данных для пользователей, не желающих устанавливать приложение.
+Этого возможно добиться при помощи создания мобильных приложений для операционных систем iOS и \en{Android}.
+Также необходимо наличие web интерфейса отправки данных для пользователей, не желающих устанавливать приложение.
 Кроме того желательно предоставление возможности интеграции системы со сторонними клиентскими приложениями путём создания документированного API для отправки данных в систему.
 
 \nwln
-Для осуществления модерации и работы с данными требуется создание сервисного вебинтерфейса, который далее в данной работе будет называться \linkterm{servicesite}{сервисный сайт} системы.
+Для осуществления модерации и работы с данными требуется создание сервисного web интерфейса, который далее в данной работе будет называться \linkterm{servicesite}{сервисный сайт} системы.
 Также для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения обработанных данных в формате \textquote{CSV}.
 Также желательно наличие возможности демонстрации статистики собранных данных на сторонних сайтах путём создания документированного API для демонстрации данных, загруженных в систему. \\
 
@@ -51,24 +51,24 @@
 \pictureone
 
 \tab
-Серверная часть системы была написана на языке программирования Python с использованием фреймворка Django.
+Серверная часть системы была написана на языке программирования \en{Python} с использованием фреймворка \en{Django}.
 Такой выбор обусловлен тем, что этот фреймворк с одной стороны предлагает единый интерфейс доступа к различным базам данных, что будет полезно в случае необходимости изменения СУБД, а с другой стороны удовлетворяет необходимость создания графического пользовательского интерфейса для администраторов приложения, автоматически генерируя сервисный сайт.
 
 \nwln
-В качестве системы управления базами данных была использована PostgreSQL, так как она распространяется под открытой лицензией, а также имеет специальные геометрические типы данных, которые можно использовать для работы с географическими координатами.
-Для работы с ними также используется программа PostGIS.
-Она предоставляет увеличение скорости работы до 2.5 раз по сравнению с аналогами (например, MongoDB) при работе со сложными запросами к геометрическим данным (например, вычислений расстояния между точками)\cite{postgis-vs-mongo}.
+В качестве системы управления базами данных была использована \en{PostgreSQL}, так как она распространяется под открытой лицензией, а также имеет специальные геометрические типы данных, которые можно использовать для работы с географическими координатами.
+Для работы с ними также используется программа \en{PostGIS}.
+Она предоставляет увеличение скорости работы до 2.5 раз по сравнению с аналогами (например, \en{MongoDB}) при работе со сложными запросами к геометрическим данным (например, вычислений расстояния между точками)\cite{postgis-vs-mongo}.
 
 \nwln
-Код приложения-клиента был написан на языке Dart с использованием фреймворка Flutter\cite{flutter-vs-react}.
-Такой выбор обусловлен необходимостью одновременной разработки для мобильных платформ и WEB-браузеров.
+Код приложения-клиента был написан на языке \en{Dart} с использованием фреймворка \en{Flutter}\cite{flutter-vs-react}.
+Такой выбор обусловлен необходимостью одновременной разработки для мобильных платформ и web браузеров.
 Разработка единой кодовой базы для всех платформ позволяет сократить время разработки, а также бюджет и расходы на поддержку проекта.
-Фреймворк Flutter распространяется под открытой лицензией, а также позволяет создать одинаковый пользовательский интерфейс для всех платформ и добиться высокой производительности на каждой из них, что улучшает опыт пользователя\cite{flutter-better}.
+Фреймворк \en{Flutter} распространяется под открытой лицензией, а также позволяет создать одинаковый пользовательский интерфейс для всех платформ и добиться высокой производительности на каждой из них, что улучшает опыт пользователя\cite{flutter-better}.
 
 \nwln
 Для хранения и передачи пользовательских данных в клиентском приложении была выбрана архитектура BLoC\cite{bloc-better}, специально разработанная для этого фреймворка, и позволяющая отделить бизнес-логику программы от пользовательского интерфейса, что в свою очередь приведёт к меньшим временным и финансовым затратам на тестирование программы.
 
 \nwln
 В качестве средства повышения точности присланных пользователями данных была выбрана свёрточная нейронная сеть\cite{convolutional-better}, так как она позволяет достаточно точно произвести классификацию фотографий.
-Для реализации нейронной сети был выбран фреймворк TensorFlow\cite{tensorflow-better}, так как он распространяется под открытой лицензией, а также позволяет достичь достаточно высоких показателей точности классификации изображений.
-В качестве модели для применения технологии transfer learning была выбрана модель XCeption\cite{xception-better}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
+Для реализации нейронной сети был выбран фреймворк \en{TensorFlow}\cite{tensorflow-better}, так как он распространяется под открытой лицензией, а также позволяет достичь достаточно высоких показателей точности классификации изображений.
+В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{XCeption}\cite{xception-better}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
